ajustement du bloc headimg dans l'ensemble des modules

--- a/src/includes/aepe/_headimg.pug
+++ b/src/includes/aepe/_headimg.pug
@@ -1,4 +1,4 @@
-//-Header Hôtellerie images
+//-Header Aepe images
 mj-section(padding="20px")
     mj-column
         mj-image(padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie")/
