--- a/src/templates/_aepe.pug
+++ b/src/templates/_aepe.pug
@@ -42,6 +42,9 @@ mjml
         //- bloc header images
         block headimg
             include ../includes/aepe/_headimg
+        //- bloc header texte
+            block headtext
+            include ../includes/aepe/_headtext
         //- bloc intineraire
         block itineraire
             include ../includes/aepe/_itineraire
