--- a/src/templates/_sm.pug
+++ b/src/templates/_sm.pug
@@ -39,9 +39,12 @@ mjml
     mj-body(background-color='#f2f2f2' width="600px")
         //- content
         block content
-        //- bloc header
-            block header
-            include ../includes/sm/_header
+        //- bloc header images
+        block headimg
+            include ../includes/sm/_headimg
+        //- bloc header texte
+            block headtext
+            include ../includes/sm/_headtext
         //- bloc itineraire
         block itineraire
             include ../includes/sm/_itineraire
