--- a/src/includes/immobilier/_headimg.pug
+++ b/src/includes/immobilier/_headimg.pug
@@ -1,7 +1,7 @@
 //-Header Immobilier images
 mj-section(padding="20px")
     mj-column
-        mj-image(padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie")/
+        mj-image(padding="0" width="153px" src="https://i.ibb.co/TqgzjgC3/ecosup-Immobilier.png" alt="logo Ecosup Immobilier")/
 mj-section(padding="0" mj-class="bg0")
     mj-column(width="100%" padding="3px 0")
         mj-image(padding="0" width="600px" src="https://i.ibb.co/6RYDGsQN/jpo-Aff21062025.png" alt="affiche de la jpo du samedi 21 juin 2025")/
