--- a/src/index.pug
+++ b/src/index.pug
@@ -5,9 +5,9 @@
 //-extends templates/_hotellerie
 //-extends templates/_immobilier
 //-extends templates/_sm
-//-extends templates/_supveto
-extends templates/_tourisme
-block content 
+extends templates/_supveto
+//-extends templates/_tourisme
+block content
     mj-section(padding="0")
         mj-column
             mj-text(align="center") #[a(style='color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px' href='{{mirror}}') Voir la version en ligne] &nbsp;&nbsp;|&nbsp;&nbsp; #[a(style='color:#4d4d4d;font-size:10px;font-weight:500;line-height:12px;' href='{{ unsubscribe }}') Se désinscrire de la liste de diffusion]
