correction de la photo du bloc Headtext

--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -82,7 +82,7 @@
         <mj-text padding="5px 10px" mj-class="T16-400 cT0">Ne manquez pas cette opportunité qui façonnera votre avenir&nbsp;!</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section mj-class="bgW" padding="0 20px" padding-bottom="20px">
+    <mj-section mj-class="bgW" padding="0 30px 20px 20px">
       <mj-group>
         <mj-column width="80%" vertical-align="bottom">   
           <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Hélène Salmon</mj-text>
@@ -90,7 +90,7 @@
           <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Hôtellerie</mj-text>
         </mj-column>
         <mj-column width="20%"> 
-          <mj-image padding="0" padding-right="10px" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg"></mj-image>
+          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg"></mj-image>
         </mj-column>
       </mj-group>
     </mj-section>
