--- a/src/includes/hotellerie/_headtext.pug
+++ b/src/includes/hotellerie/_headtext.pug
@@ -15,11 +15,11 @@ mj-section(background-color="#ffffff" padding="20px")
         mj-text(padding="0px 10px" mj-class="T16-400 cT0")
             | - #[span(style="font-weight:700;color:#1a1a1a;") Vivez] l'expérience et donnez un vrai coup d'accélérateur à votre carrière.
         mj-text(padding="5px 10px" mj-class="T16-400 cT0") Ne manquez pas cette opportunité qui façonnera votre avenir&nbsp;!
-mj-section(mj-class="bgW" padding="0 20px" padding-bottom="20px")
+mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
             mj-text(align="right" padding="0px 10px" mj-class="T13-700 cT1") Hélène Salmon
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Responsable des études
             mj-text(align="right" padding="0px 10px" mj-class="T13-400 cT0") Ecosup Hôtellerie
         mj-column(width="20%") 
-            mj-image(padding="0" padding-right="10px" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg")
+            mj-image(padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg")
