mettre en place des images dans les blocs Headimg

--- a/src/includes/commerce/_headimg.pug
+++ b/src/includes/commerce/_headimg.pug
@@ -10,7 +10,7 @@ mj-section(padding="0" mj-class="bg0")
         mj-column(width="50%")
             mj-image(padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="")/
         mj-column(width="25%")
-            mj-image(padding="0" width="150px" src="https://i.ibb.co/5vYp60x/112024-A11-Assurance.jpg" alt="")/
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/0yznBsFs/com2.jpg" alt="")/
         mj-column(width="25%")
             mj-image(padding="0" width="150px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt="")/
     mj-column(mj-class="bg0" width="100%")
