--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 21 juin 2025 Ecosup Hôtellerie</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Diététique</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -24,16 +24,15 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #C21718" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#C21718"></mj-button>
+      <mj-button border="2px solid #EC619F" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#EC619F"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
       <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
-      <mj-class name="bgW" background-color="#ffffff"/>
-      <mj-class name="c0" color="#C21718"/>
-      <mj-class name="bg0" background-color="#C21718"/>
-      <mj-class name="c1" color="#74151E"/>
-      <mj-class name="bg1" background-color="#74151E"/>
+      <mj-class name="c0" color="#EC619F"/>
+      <mj-class name="bg0" background-color="#EC619F"/>
+      <mj-class name="c1" color="#A83163"/>
+      <mj-class name="bg1" background-color="#A83163"/>
     </mj-attributes>
     <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
@@ -45,7 +44,7 @@
     </mj-section>
     <mj-section padding="20px">
       <mj-column>
-        <mj-image padding="0" width="153px" src="https://i.ibb.co/ZGht1kv/logo-EHotellerie.png" alt="logo Ecosup Hôtellerie"/>
+        <mj-image padding="0" width="153px" src="https://i.ibb.co/N1YNCcK/logo-EDietetique.png" alt="logo Ecosup Diététique"/>
       </mj-column>
     </mj-section>
     <mj-section padding="0" mj-class="bg0">
@@ -59,7 +58,7 @@
           <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt=""/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/5vYp60x/112024-A11-Assurance.jpg" alt=""/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/8DpjjKVX/diet1.jpg" alt=""/>
         </mj-column>
         <mj-column width="25%">
           <mj-image padding="0" width="150px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt=""/>
@@ -68,31 +67,6 @@
       <mj-column mj-class="bg0" width="100%">
         <mj-text align="center" padding="3px 20px" mj-class="T16-700 cTW">Journée Portes Ouvertes samedi&nbsp;21&nbsp;juin&nbsp;de&nbsp;9h30&nbsp;à&nbsp;13h</mj-text>
       </mj-column>
-    </mj-section>
-    <mj-section background-color="#ffffff" padding="20px"> 
-      <mj-column width="88%">
-        <mj-text padding="5px 10px" mj-class="T36-900 c0">Votre carrière dans l'Hôtellerie Restauration commence ici, à nos côtés&nbsp;! </mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT0"><span style="font-weight:700;color:#1a1a1a;">{{ contact.PRENOM }}</span>, les métiers de l'Hôtellerie Restauration vous passionnent&nbsp;? Faites de votre ambition une réalité avec une formation diplômante qui propulse votre avenir&nbsp;! </mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT0">Rejoignez-nous ce <span style="font-weight:700;color:#1a1a1a;">samedi 21 juin de 9h30 à 13h</span> pour une immersion unique&nbsp;:</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0">- <span style="font-weight:700;color:#1a1a1a;">Découvrez</span> un campus moderne, </mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0">- <span style="font-weight:700;color:#1a1a1a;">Échangez</span> avec des experts et des étudiants inspirants,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0">- <span style="font-weight:700;color:#1a1a1a;">Assistez</span> à des présentations motivantes sur nos programmes,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0">- <span style="font-weight:700;color:#1a1a1a;">Posez</span> toutes vos questions sur les admissions et la vie étudiante,</mj-text>
-        <mj-text padding="0px 10px" mj-class="T16-400 cT0">- <span style="font-weight:700;color:#1a1a1a;">Vivez</span> l'expérience et donnez un vrai coup d'accélérateur à votre carrière.</mj-text>
-        <mj-text padding="5px 10px" mj-class="T16-400 cT0">Ne manquez pas cette opportunité qui façonnera votre avenir&nbsp;!</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section mj-class="bgW" padding="0 30px 20px 20px">
-      <mj-group>
-        <mj-column width="80%" vertical-align="bottom">   
-          <mj-text align="right" padding="0px 10px" mj-class="T13-700 cT1">Hélène Salmon</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Responsable des études</mj-text>
-          <mj-text align="right" padding="0px 10px" mj-class="T13-400 cT0">Ecosup Hôtellerie</mj-text>
-        </mj-column>
-        <mj-column width="20%"> 
-          <mj-image padding="0" width="120px" border-radius="10px 0px" src="https://i.ibb.co/nNn2KVYL/Helene21062025.jpg"></mj-image>
-        </mj-column>
-      </mj-group>
     </mj-section>
     <mj-wrapper background-color="#ffffff" padding="20px">
       <mj-section padding="0px">
@@ -117,23 +91,22 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-hotellerie.fr" target="_blank">www.ecosup-hotellerie.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-dietetique.fr" target="_blank">www.ecosup-dietetique.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon cinq étoiles"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits"/>
       </mj-column>
-      <mj-column width="80%">   
+      <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">MAN</span> Mise à Niveau Hôtellerie Restauration</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation initiale</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC619F;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Diététique et nutrition.</mj-text>
+        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Bourse Ecosup</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
+        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
+           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
+        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
       </mj-column>
     </mj-section>
@@ -144,65 +117,17 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/x868xWbB/icon-Diet062025.png" alt="icon bol composé de légumes et de fruits"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">BTS</span> Management de l'Hôtellerie - Restauration</mj-text>
-        <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Diplôme reconnue par l'État</span>,</mj-text>
-        <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#c21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Responsable commercial en Hôtellerie</mj-text>
+        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation initiale</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#EC619F;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Bachelor</span> Chargé(e) de projet en nutrition et de la prise en charge des troubles du comportement alimentaire.</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac+2,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">1 an</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Travel Week</span>, semaine immersive en mobilité internationale,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="0">
-      <mj-column>
-        <mj-spacer height="10px"></mj-spacer>
-      </mj-column>
-    </mj-section>
-    <mj-section padding="20px" background-color="#e6e6e6">
-      <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/jkmfByQp/icon-Hot062025.png" alt="icon hôtel cinq étoiles"/>
-      </mj-column>
-      <mj-column width="80%">
-        <mj-spacer height="20px"></mj-spacer>
-        <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#C21718;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">Mastère</span> Manager des Organisations en Hôtellerie</mj-text>
-        <mj-text padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Post-Bac+3,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">2 ans</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Le Plus : <span style="font-weight:700;color:#1a1a1a;">Double certification internationale</span>,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
       </mj-column>
     </mj-section>
     <mj-wrapper background-color="#1a1a1a" padding="32px" padding-bottom="0">
