--- a/src/includes/supveto/_headimg.pug
+++ b/src/includes/supveto/_headimg.pug
@@ -8,10 +8,10 @@ mj-section(padding="0" mj-class="bg0")
 mj-section(padding="0" mj-class="bg0")
     mj-group(width="100%")
         mj-column(width="50%")
-            mj-image(padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="")/
+            mj-image(padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'Étudiants")/
         mj-column(width="25%")
-            mj-image(padding="0" width="150px" src="https://i.ibb.co/ZzKZ0r8m/sup2.jpg" alt="")/
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/ZzKZ0r8m/sup2.jpg" alt="Connaissance et soins des animaux compagnie")/
         mj-column(width="25%")
-            mj-image(padding="0" width="150px" src="https://i.ibb.co/dD6kJyT/rest02-2024.jpg" alt="")/
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/PZC8ZtR3/jpo-Sup-Img21062025.jpg" alt="Connaissance et soins des NAC")/
     mj-column(mj-class="bg0" width="100%")
         mj-text(align="center" padding="3px 20px" mj-class="T16-700 cTW") Journée Portes Ouvertes samedi&nbsp;21&nbsp;juin&nbsp;de&nbsp;9h30&nbsp;à&nbsp;13h
