installation du texte de base du bloc headtext module hôtellerie

--- a/src/includes/hotellerie/_headtext.pug
+++ b/src/includes/hotellerie/_headtext.pug
@@ -2,19 +2,15 @@
 mj-section(background-color="#ffffff" padding="20px")  
     mj-column(width="88%")
         mj-text(padding="5px 10px" mj-class="T36-900 c0") Votre carrière dans l'Hôtellerie Restauration commence ici, à nos côtés&nbsp;! 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], les métiers de l'Hôtellerie Restauration vous passionnent&nbsp;? Faites de votre ambition une réalité avec une formation diplômante qui propulse votre avenir&nbsp;! 
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Rejoignez-nous ce #[span(style="font-weight:700;color:#1a1a1a;") samedi 21 juin de 9h30 à 13h] pour une immersion unique&nbsp;:
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
-            | - #[span(style="font-weight:700;color:#1a1a1a;") Découvrez] un campus moderne, 
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
-            | - #[span(style="font-weight:700;color:#1a1a1a;") Échangez] avec des experts et des étudiants inspirants,
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
-            | - #[span(style="font-weight:700;color:#1a1a1a;") Assistez] à des présentations motivantes sur nos programmes,
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
-            | - #[span(style="font-weight:700;color:#1a1a1a;") Posez] toutes vos questions sur les admissions et la vie étudiante,
-        mj-text(padding="0px 10px" mj-class="T16-400 cT0")
-            | - #[span(style="font-weight:700;color:#1a1a1a;") Vivez] l'expérience et donnez un vrai coup d'accélérateur à votre carrière.
-        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Ne manquez pas cette opportunité qui façonnera votre avenir&nbsp;!
+        mj-text(padding="5px 10px" mj-class="T16-400 cT0") #[span(style="font-weight:700;color:#1a1a1a;") {{ contact.PRENOM }}], vous souhaitez vous former dans un secteur dynamique et en pleine évolution&nbsp;? 
+        mj-text(padding="5px 10px" mj-class="T16-400 cT0") Découvrez un programme diplômant en alternance qui vous permet de conjuguer apprentissage théorique et expérience professionnelle dans l'hôtellerie-restaration.
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") Lors de cette matinée d'immersion, vous pourrez&nbsp;:
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") - Explorer un campus moderne,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") - Échanger avec des experts et des étudiants,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") - Assister à des présentations détaillées sur nos formations, notamment en alternance,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") - Obtenir des réponses à vos questions sur les admissions et la vie étudiante,
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") - Découvrir les nombreuses perspectives de carrière offertes par l'hôtellerie et la restauration
+        mj-text(padding="0px 10px" mj-class="T16-400 cT0") Une opportunité à saisir pour concrétiser vos ambitions et bâtir un projet professionnel solide.
 mj-section(mj-class="bgW" padding="0 30px 20px 20px")
     mj-group
         mj-column(width="80%" vertical-align="bottom")    
